# LLMBrix

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
examples/: 1_llm_generate.py  1_llm_predict.py  3_simple_chatbot.py  4_tool_calling_chatbot.py  6_structured_chatbot.py
examples/5_chatbot_with_prompt/: chatbot.py  system.yaml
examples/6_ai_term/: _bkup_tabs.py  blesed_term3.py  blessed-term4.py  blessed_term.py  blessed_term2.py  command_executor.py  configure_terminal.py  main.py  requirements.txt  term.py
examples/6_codebase_rag/: data_model.py  ideation.md  util.py
examples/simple_chatbot/: chatbot.py
llmbrix/: agent.py  chat_agent.py  chat_history.py  chatbot.py  exceptions.py  gemini_model.py  gpt_openai.py  graph.py  model.py  prompt.py  prompt_reader.py  tool.py  tool_agent.py  tool_executor.py  tool_output.py  tool_param.py  tracing.py
llmbrix/base/: __init__.py
llmbrix/chat/: __init__.py  agent.py  gpt.py  gpt_openai.py
llmbrix/conv_hist/: conv_turn_hist.py
llmbrix/graph/: __init__.py  graph.py  graph_state.py  node.py  node_base.py  router_node.py
llmbrix/msg/: __init__.py  assistant_msg.py  base_msg.py  developer_msg.py  file_types.py  modality.py  model_msg.py  model_msg_segment.py  model_msg_segment_types.py  msg.py  msg_base.py  segment_types.py  system_msg.py  tool_msg.py  tool_output_msg.py  tool_request_msg.py  tool_result_msg.py  user_msg.py  user_msg_file_types.py
llmbrix/tool/: __init__.py  tool.py  tool_executor.py
llmbrix/tool_calling/: base_tool.py  tool_executor.py  tool_output.py  tool_param.py
llmbrix/toolbox/: get_datetime.py
llmbrix/tools/: __init__.py  about_me.py  calculator_tool.py  datetime_tool.py  get_datetime.py  list_dir.py  list_dir_tool.py  tool.py  tool_base.py  tool_executor.py  tool_param.py
propus/: gemini_model.py  tool_agent.py
propus/data_models/: session_context.py  user.py
propus/graph/: graph.py  graph_run_context.py
propus/msg/: __init__.py  base_msg.py  model_msg.py  tool_msg.py  (+3 more)
scorpius/: gemini_model.py  tool_agent.py
scripts/: release_check_dist.sh  release_test.sh
tests/: test_chat_history.py  test_conv_turn_hist.py  test_graph.py  test_prompt_reader.py
(+29 files in other folders)
