[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llmbrix"
authors = [
    { name = "Matej Kvassay", email = "matejkvassay5@gmail.com" }
]
description = "Low abstraction LLM framework."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "openai",
    "pytest",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit"
]


[tool.setuptools.packages.find]
where = ["."]
